--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ body{
     font-family: 'Poppins', sans-serif;
     line-height: 1.6;
     margin: 20px;
-    background-color: blue;
-    color: #333;
+    background-color: rgb(2, 2, 96);
+    color: white;
 }
 
 nav{
@@ -29,7 +29,7 @@ nav a{
 
 aside{
     flex: 1;
-    background-color: #f0f0f0;
+    background-color: rgb(2, 2, 59);
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
@@ -63,4 +63,77 @@ img{
     margin: 10px auto;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+}
+
+.content-wrapper {
+    display: flex;
+    padding: 20px;
+    flex-direction: row;
+}
+
+.main-content {
+    flex: 3;
+    padding-right: 20px;
+}
+
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.column.side {
+    width: 25%;
+}
+
+.column.middle {
+    width: 30%;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+footer {
+    background-color: #e0e0e0;
+    padding: 10px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .content-wrapper {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .main-content {
+        padding-right: 0;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+        width: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .content-wrapper {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .main-content {
+        padding-right: 0;
+        margin-bottom: 20px;
+    }
 }
