--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav a{
 
 aside{
     flex: 1;
-    background-color: rgb(2, 2, 59);
+    background-color: rgb(2, 2, 59) !important;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
