--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,8 @@ img{
 }
 
 .map-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
     max-width: 100%;
-    height: auto;
-    padding-top: 30px;
+    margin-top: 30px;
 }
 
 .video-container iframe {
